# push_swap

./: .sorts.c.swp  .sum_ops.c.swp  .swp  ALGOS  CMakeLists.txt  Makefile  a.out  checker  checker.c  commands_a.c  commands_b.c  commands_other.c  ft_printf.h  get_next_line.c  len_nbr.c  minimake.sh  opt_operations.c  push_swap  push_swap.c  push_swap.h  sorts.c  sum_ops.c  validation.c  vis.c  visual.c
checker.dSYM/Contents/Resources/DWARF/: checker
includes/: get_next_line.h  push_swap.h
includes/libft/: .swp  auteur  ft_atoi.c  ft_lstnew.c  ft_memdel.c  ft_memmove.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strnew.c  ft_tolower.c
libft/: Makefile  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_isnum.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_memalloc.c  ft_memccpy.c  ft_memcpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strtrim.c  ft_toupper.c
push_swap/: .minimake.sh.swp  CMakeLists.txt  a.out  checker  checker.c  push_swap  push_swap.c  push_swap.h
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
push_swap/a.out.dSYM/Contents/Resources/DWARF/: a.out
push_swap/checker.dSYM/Contents/Resources/DWARF/: checker
push_swap/libft/: ft_isalpha.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_itoa.c  ft_lstdelone.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strcmp.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strnequ.c  ft_strrchr.c  ft_strsub.c  libft.h
push_swap/push_swap.dSYM/Contents/Resources/DWARF/: push_swap
