cmake_minimum_required(VERSION 3.15)
project(PUSH_SWAP C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(includes/libft)

add_executable(PUSH_SWAP
        includes/libft/ft_atoi.c
        includes/libft/ft_bzero.c
        includes/libft/ft_isalnum.c
        includes/libft/ft_isalpha.c
        includes/libft/ft_isascii.c
        includes/libft/ft_isdigit.c
        includes/libft/ft_islower.c
        includes/libft/ft_isnum.c
        includes/libft/ft_isprint.c
        includes/libft/ft_itoa.c
        includes/libft/ft_lstadd.c
        includes/libft/ft_lstdel.c
        includes/libft/ft_lstdelone.c
        includes/libft/ft_lstiter.c
        includes/libft/ft_lstmap.c
        includes/libft/ft_lstnew.c
        includes/libft/ft_memalloc.c
        includes/libft/ft_memccpy.c
        includes/libft/ft_memchr.c
        includes/libft/ft_memcmp.c
        includes/libft/ft_memcpy.c
        includes/libft/ft_memdel.c
        includes/libft/ft_memmove.c
        includes/libft/ft_memset.c
        includes/libft/ft_putchar.c
        includes/libft/ft_putchar_fd.c
        includes/libft/ft_putendl.c
        includes/libft/ft_putendl_fd.c
        includes/libft/ft_putnbr.c
        includes/libft/ft_putnbr_fd.c
        includes/libft/ft_putstr.c
        includes/libft/ft_putstr_fd.c
        includes/libft/ft_strcat.c
        includes/libft/ft_strchr.c
        includes/libft/ft_strclr.c
        includes/libft/ft_strcmp.c
        includes/libft/ft_strcpy.c
        includes/libft/ft_strdel.c
        includes/libft/ft_strdup.c
        includes/libft/ft_strequ.c
        includes/libft/ft_striter.c
        includes/libft/ft_striteri.c
        includes/libft/ft_strjoin.c
        includes/libft/ft_strlcat.c
        includes/libft/ft_strlen.c
        includes/libft/ft_strmap.c
        includes/libft/ft_strmapi.c
        includes/libft/ft_strncat.c
        includes/libft/ft_strncmp.c
        includes/libft/ft_strncpy.c
        includes/libft/ft_strnequ.c
        includes/libft/ft_strnew.c
        includes/libft/ft_strnstr.c
        includes/libft/ft_strrchr.c
        includes/libft/ft_strsplit.c
        includes/libft/ft_strstr.c
        includes/libft/ft_strsub.c
        includes/libft/ft_strtrim.c
        includes/libft/ft_tolower.c
        includes/libft/ft_toupper.c
        includes/libft/libft.h
        includes/get_next_line.h
        includes/push_swap.h
        checker.c
        commands_a.c
        commands_b.c
        commands_other.c
        get_next_line.c
        len_nbr.c
        opt_operations.c
        push_swap.c
        sorts.c
        sum_ops.c
        validation.c
        visual.c)
